# the-forge

./: .env.example  .gitmodules  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: GENERAL.yml
.github/workflows/: execution-tests.yml  publish-aggregator.yml  publish-execution.yml  publish-validation.yml  validation-tests.yml
.keystore/: 807800ad-de37-4531-933e-ff0b96eb7004
.othentic/: state.output.json
examples/: Cargo.toml
examples/src/: x.rs
examples/x.com/: x_post.rs
execution/: .env.example  .gitignore  Cargo.toml  dockerfile
execution/contracts/: .gitignore  deployment.sh  foundry.toml  package.json  pnpm-lock.yaml  remappings.txt  upgrade.sh
execution/contracts/broadcast/ForgeRegistrar.s.sol/1516/: run-latest.json
execution/contracts/broadcast/ForgeRegistry.s.sol/1315/: run-latest.json
execution/contracts/broadcast/IPARegistrar.s.sol/1516/: run-1735585958.json
execution/contracts/script/: ForgeRegistrar.s.sol  ForgeRegistry.s.sol  IPARegistrar.s.sol
execution/contracts/src/: ForgeRegistrar.sol  ForgeRegistry.sol  ForgeStorage.sol  IPARegisrar.sol  IPARegistrar.sol
execution/contracts/src/mocks/: SimpleNFT.sol
execution/contracts/test/: 0_ForgeRegistrar.t.sol  0_ForgeRegistry.t.sol  0_IPARegistrar.t.sol
execution/crates/adapter/: Cargo.toml
execution/crates/adapter/src/: lib.rs
execution/crates/eigenda/: Cargo.toml
execution/crates/eigenda/src/: lib.rs
execution/crates/irys/: Cargo.toml
execution/crates/irys/src/: lib.rs  main.rs
execution/crates/migration/: Cargo.toml
execution/crates/migration/guest/: Cargo.toml  example-input.json  sindri.json
execution/crates/migration/guest/src/: lib.rs  utils.rs
execution/crates/migration/src/: lib.rs
execution/crates/othentic/: Cargo.toml
execution/crates/othentic/src/: lib.rs
execution/crates/payment/: Cargo.toml
execution/crates/payment/src/: lib.rs
execution/crates/pinata/: Cargo.toml
execution/crates/pinata/src/: lib.rs
execution/crates/registrar/: Cargo.toml
execution/crates/registrar/fixture/abi/: ForgeRegistrar.json  ForgeRegistry.json  IPARegistrar.json
execution/crates/registrar/src/: lib.rs
execution/crates/verifier/: Cargo.toml
execution/crates/verifier/src/: lib.rs
execution/src/: error.rs  main.rs  server.rs  service.rs  utils.rs
syncer/: .env.example  dockerfile
validation/: Cargo.toml  docker-compose.yml  dockerfile
validation/.cargo/: config.toml
validation/crates/migration/: .gitignore  Cargo.toml
validation/crates/migration/guest/: Cargo.toml  README.md  example-input.json  sindri.json
validation/crates/migration/guest/src/: lib.rs  main.rs  utils.rs
validation/crates/migration/src/: lib.rs  sindri.rs
validation/src/: error.rs  main.rs  server.rs  service.rs
