[package]
name = "forge-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "x-post"
path = "x.com/x_post.rs"

[[example]]
name = "image-post"
path = "instagram/image_post.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-std",
  "fs",
] }
tokio-util = "0.7"
hyper = { version = "1.1", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"
