[workspace]
members = [".", "crates/*"]
default-members = ["."]

[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
chrono = "0.4"
verifier = { path = "crates/verifier" }

[dependencies]
verifier = { path = "crates/verifier" }
irys = { path = "crates/irys" }
eigenda = { path = "crates/adapter" }
axum = "0.7.9"
eyre="0.6.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["full"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
alloy = { version = "0.9.0", features = ["full"] }
