[workspace]
members = [".", "crates/*"]
default-members = ["."]

[package]
name = "execution"
version = "0.1.0"
edition = "2021"

[lib]
name = "execution"
path = "src/lib.rs"

[workspace.dependencies]
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.8", package = "tlsn-core" }
elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
chrono = "0.4"
verifier = { path = "crates/verifier" }

[dependencies]
verifier = { path = "crates/verifier" }
irys = { path = "crates/irys" }
eigenda = { path = "crates/eigenda"}
pinata = { path = "crates/pinata" }
registrar = { path = "crates/registrar" }
othentic = { path = "crates/othentic" }
axum = "0.7.9"
eyre="0.6.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dotenv = "0.15.0"
thiserror = "2.0.9"
tokio = { version = "1.37.0", features = ["full"] }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.8", package = "tlsn-core" }
alloy = { version = "0.9.0", features = ["full"] }
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"] }
alloy-primitives = "0.8"
