[package]
name = "othentic"
version = "0.1.0"
edition = "2021"

[lib]
name = "othentic"
path = "src/lib.rs"

[dependencies]
alloy = { version = "0.9.0", features = ["full"] }
alloy-sol-types = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
eyre = "0.6.12"
tokio = "1.42.0"
serde = { version = "1.0.147", features = ["derive"] }
dotenvy = "0.15.7"
serde_json = "1.0"
