[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "verifier"
path = "src/lib.rs"

[dependencies]
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
elliptic-curve = {version = "0.13.5", features = ["pkcs8"]}
p256 = { version = "0.13", features = ["pem", "ecdsa"] }
chrono = "0.4"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
