[package]
name = "migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
base64 = "0.22.1"
dotenv = "0.15.0"
sindri = "0.1.0"
tokio = { version = "1.37.0", features = ["full"] }
serde_json = "1.0.124"
tar = "0.4.41"
flate2 = "1.0.31"
reqwest = "0.12.5"
serde = { version = "1.0.209", features = ["derive"] }
