[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "src/lib.rs"

[features]
guest = []

[dependencies]
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", rev="55c577f5a859eee843fd88d1d14bd2127b3ddd1d", features = ["guest-std"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha3 = { version = "0.10.8"}
verifier = { git = "https://github.com/0xZeroLabs/the-forge", package = "verifier", branch = "main" }
bytemuck = "1.12"
getrandom = {version = "0.2", features = ["custom"] }
rand = "0.8"
