[package]
name = "program"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sp1-zkvm = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sha3 = { version = "0.10.8"}
verifier = { git = "https://github.com/0xZeroLabs/the-forge", package = "verifier", branch = "main" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.5", package = "tlsn-core" }
bytemuck = "1.12"
getrandom = {version = "0.2", features = ["custom"] }
rand = "0.8"
